# Von-Karman-lbm-simulator

./: CMakeLists.txt  config.txt  config_test.txt  runtime.csv
cmake/: tpl.hpp.in
include/lbm/: communications.hpp  config.hpp  initialization.hpp  lib.hpp  physics.hpp  structures.hpp
report/: Optimisations.tex  Untitled.tex  analyse.tex  annexes.tex  conclusion.tex  experiences.tex  introduction.tex  methodo.tex  references.bib  resultats.tex
report/.texpadtmp/: Untitled.aux  Untitled.bcf  Untitled.blg  Untitled.run.xml
src/lbm/: CMakeLists.txt  communications.cpp  config.cpp  initialization.cpp  physics.cpp  structures.cpp
